--- a/docs/05树与二叉树.md
+++ b/docs/05树与二叉树.md
@@ -1,4 +1,4 @@
-# 第5章 树与二叉树
+# 第 5 章 树与二叉树
 
 [toc]
 
@@ -17,24 +17,24 @@
 
 > 由于树中的分支是有向的，即从双亲指向孩子，所以树中的路径是从上向下的，同一双亲的两个孩子之间不存在路径。
 
-> 树的路径长度是指树根到每个结点的路径长的总和，根到每个结点的路径长度的最大值应是树的高度减1。
+> 树的路径长度是指树根到每个结点的路径长的总和，根到每个结点的路径长度的最大值应是树的高度减 1。
 
 ### 5.1.3 树的性质
 
 1. 结点数=所有结点的度数之和+1
-2. 度为m的树中第 i 层上至多有$m^{i-1}$个结点（$i\ge 1$）。m叉树第 i 层至多有m个结点（$i\ge 1$）。
-3. 高度为 $h$ 的 $m$ 叉树至多有$(m^h-1)/(m-1)$个结点。  *相当于首项为1，m 为公比的 h 项之和*
-4. 具有n个结点的 m 叉树的最小高度为$\lceil \log_m (n(m-1)+1) \rceil$。*向上取整*
-5. 树的度和m叉树的区别
+2. 度为 m 的树中第 i 层上至多有$m^{i-1}$个结点（$i\ge 1$）。m 叉树第 i 层至多有 m 个结点（$i\ge 1$）。
+3. 高度为 $h$ 的 $m$ 叉树至多有$(m^h-1)/(m-1)$个结点。  *相当于首项为 1，m 为公比的 h 项之和*
+4. 具有 n 个结点的 m 叉树的最小高度为$\lceil \log_m (n(m-1)+1) \rceil$。*向上取整*
+5. 树的度和 m 叉树的区别
 
-| 度为m的树                       | m叉树                         |
+| 度为 m 的树                       | m 叉树                         |
 | ------------------------------- | ----------------------------- |
-| 任意结点的度 ≤ m(最多m个孩子)   | 任意结点的度≤ m (最多m个孩子) |
-| 至少有一个结点度 = m(有m个孩子) | 允许所有结点的度都 < m        |
-| 一定是非空树,至少有 m+1 个结点  | 可以是空树                    |
+| 任意结点的度 ≤ m（最多 m 个孩子）   | 任意结点的度≤ m （最多 m 个孩子） |
+| 至少有一个结点度 = m（有 m 个孩子） | 允许所有结点的度都 < m        |
+| 一定是非空树，至少有 m+1 个结点  | 可以是空树                    |
 
-6. 高度为h的m叉树至少有h个结点。
-高度为h、度为m的树至少有h+m-1个结点。
+6. 高度为 h 的 m 叉树至少有 h 个结点。
+高度为 h、度为 m 的树至少有 h+m-1 个结点。
 
 ## 5.2 二叉树的概念
 
@@ -43,22 +43,22 @@
 1. 二叉树可以为空
 
    1. $n_0$ = $n_2$+1 
-   2. 第i层至多有$2^{i-1}$个结点 $(i\ge1)$ 。
-   3. 高度为h的二叉树至多有 $2^h-1$ 个结点
+   2. 第 i 层至多有$2^{i-1}$个结点 $(i\ge1)$ 。
+   3. 高度为 h 的二叉树至多有 $2^h-1$ 个结点
 
 2. 几个特殊的二叉树
 
    1. 满二叉树
 
-      一颗高度为h，且含有$2^h-1$个结点的二叉树称为**满二叉树**
+      一颗高度为 h，且含有$2^h-1$个结点的二叉树称为**满二叉树**
 
    2. 完全二叉树
 
       1. 若$i\le\lfloor n/2 \rfloor$ ，则结点 $i$ 为分支结点，否则为叶子结点
-      2. 具有n个（n > 0）结点的完全二叉树的高度h为$\lceil \log_2(n+1)\rceil$或==$\lfloor \log_2 n\rfloor + 1$== 
-      3. 完全二叉树最多只有一个度为1的结点,即==$n_1$ = 0  或1==        $n_0$ = $n_2$+1 → ==$n_0$ + $n_2$ 一定是奇数==
-         若完全二叉树有2k个(偶数)个结点，则必有 ==$n_1$ = 1, $n_0$ = k, $n_2$ = k-1==
-         若完全二叉树有2k-1个(奇数)个结点，则必有 ==$n_1$ = 0, $n_0$ = k , $n_2$ = k-1==
+      2. 具有 n 个（n > 0）结点的完全二叉树的高度 h 为$\lceil \log_2(n+1)\rceil$或==$\lfloor \log_2 n\rfloor + 1$== 
+      3. 完全二叉树最多只有一个度为 1 的结点，即==$n_1$ = 0  或 1==        $n_0$ = $n_2$+1 → ==$n_0$ + $n_2$ 一定是奇数==
+         若完全二叉树有 2k 个（偶数）个结点，则必有 ==$n_1$ = 1, $n_0$ = k, $n_2$ = k-1==
+         若完全二叉树有 2k-1 个（奇数）个结点，则必有 ==$n_1$ = 0, $n_0$ = k , $n_2$ = k-1==
 
    3. 二叉排序树
 
@@ -66,6 +66,4 @@
 
    4. 平衡二叉树
 
-       左子树和右子树的深度之差不超过1。
-
-
+       左子树和右子树的深度之差不超过 1。
