--- a/docs/05树与二叉树.md
+++ b/docs/05树与二叉树.md
@@ -27,11 +27,11 @@
 4. 具有 n 个结点的 m 叉树的最小高度为$\lceil \log_m (n(m-1)+1) \rceil$。*向上取整*
 5. 树的度和 m 叉树的区别
 
-| 度为 m 的树                       | m 叉树                         |
-| ------------------------------- | ----------------------------- |
+| 度为 m 的树                         | m 叉树                            |
+| ----------------------------------- | --------------------------------- |
 | 任意结点的度 ≤ m（最多 m 个孩子）   | 任意结点的度≤ m （最多 m 个孩子） |
-| 至少有一个结点度 = m（有 m 个孩子） | 允许所有结点的度都 < m        |
-| 一定是非空树，至少有 m+1 个结点  | 可以是空树                    |
+| 至少有一个结点度 = m（有 m 个孩子） | 允许所有结点的度都 < m            |
+| 一定是非空树，至少有 m+1 个结点     | 可以是空树                        |
 
 6. 高度为 h 的 m 叉树至少有 h 个结点。
 高度为 h、度为 m 的树至少有 h+m-1 个结点。
@@ -56,7 +56,7 @@
 
       1. 若$i\le\lfloor n/2 \rfloor$ ，则结点 $i$ 为分支结点，否则为叶子结点
       2. 具有 n 个（n > 0）结点的完全二叉树的高度 h 为$\lceil \log_2(n+1)\rceil$或==$\lfloor \log_2 n\rfloor + 1$== 
-      3. 完全二叉树最多只有一个度为 1 的结点，即==$n_1$ = 0  或 1==        $n_0$ = $n_2$+1 → ==$n_0$ + $n_2$ 一定是奇数==
+      3. 完全二叉树最多只有一个度为 1 的结点，即==$n_1$ = 0  或 1==  $n_0$ = $n_2$+1 → ==$n_0$ + $n_2$ 一定是奇数==
          若完全二叉树有 2k 个（偶数）个结点，则必有 ==$n_1$ = 1, $n_0$ = k, $n_2$ = k-1==
          若完全二叉树有 2k-1 个（奇数）个结点，则必有 ==$n_1$ = 0, $n_0$ = k , $n_2$ = k-1==
 
@@ -67,3 +67,9 @@
    4. 平衡二叉树
 
        左子树和右子树的深度之差不超过 1。
+
+## 5.3 二叉树的遍历和线索二叉树
+
+1. 先序遍历 -> 前缀表达式
+2. 中序遍历 -> 中缀表达式（需要加界限符）
+3. 后序遍历 -> 后缀表达式
